common-applications/test-environment/mindspore-usercenter-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-usercenter-website
  name: mindspore-usercenter-website
