common-applications/test-environment/mindspore-usercenter-website/website-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: mindspore-usercenter-website
spec:
  tls:
  - hosts:
    - mindspore-usercenter.test.osinfra.cn
    secretName: website-tls
  rules:
  - host: mindspore-usercenter.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
  ingressClassName: nginx
